added img_url to test my backend

--- a/client/views/books.html
+++ b/client/views/books.html
@@ -7,11 +7,12 @@
 	     <div ng-repeat="book in books">
 		 <div class="col-md-4">
 		     <div class="col-md-6">
-			 {{book.title}}
+			  <h1> {{book.title}} </h1>
 			 <p> {{book.description}} </p>
 		     </div> 
 		     
 		     <div class="col-md-6">
+			  <img src="{{book.img_url}}"></img>
 		     </div>
 
 		 </div>
