--- a/client/views/books.html
+++ b/client/views/books.html
@@ -8,6 +8,7 @@
 		 <div class="col-md-4">
 		     <div class="col-md-6">
 			  <h1> {{book.title}} </h1>
+                          <h2> {{ book.author }} </h2>
 			 <p> {{book.description}} </p>
 		     </div> 
 		     
