added new scrape: buy url

--- a/client/views/books.html
+++ b/client/views/books.html
@@ -5,15 +5,15 @@
      <div class="panel-body">
 	 <div class="row">
 	     <div ng-repeat="book in books">
-		 <div class="col-md-4">
+		 <div class="col-md-6">
 		     <div class="col-md-6">
-			  <h1> {{book.title}} </h1>
-                          <h2> {{ book.author }} </h2>
+			  <h4> {{book.title}} </h4>
 			 <p> {{book.description}} </p>
+			 <a class="btn btn-primary" href="#/books/details/{{book._id}}"> View Details </a>
 		     </div> 
 		     
 		     <div class="col-md-6">
-			  <img src="{{book.img_url}}"></img>
+			  <img class="thumbnail" src="{{book.img_url}}"></img>
 		     </div>
 
 		 </div>
@@ -21,3 +21,4 @@
 	 </div>
      </div>
  </div>
+
